@@ -33,6 +33,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
+* [jan] Avoid fatal errors if tasks don&apos;t have a UID.
 * [mjr] Fix parsing certain date formats (Bug #14348).
 * [jan] Fix deleteing alarms when completing a task.
 * [mjr] Require Horde_Perms::DELETE for including a tasklist as sync-able.
@@ -1725,6 +1726,7 @@
    <date>2016-04-05</date>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
+* [jan] Avoid fatal errors if tasks don&apos;t have a UID.
 * [mjr] Fix parsing certain date formats (Bug #14348).
 * [jan] Fix deleteing alarms when completing a task.
 * [mjr] Require Horde_Perms::DELETE for including a tasklist as sync-able.
